--- a/elementos-pre-textuais/abstract.tex
+++ b/elementos-pre-textuais/abstract.tex
@@ -1,12 +1,10 @@
-The theory of measure and integration is an important subject for advancing studies in mathematics. 
-It was initially developed by Bernhard Riemann (1826-1866), Georg Cantor (1845-1918) and Emile Borel (1871-1956) being later generalized by Henri Lebesgue (1875-1941). 
-Primarily, its development aimed to generalize Riemann's integral, correcting its limitation to exceptional cases. 
-However, in modern times, it finds applications in various areas such as Functional Analysis, Probability, Statistics, Partial Differential Equations, among others.
-Despite the contemporary significance of Lebesgue's integration theory, it is not commonly presented to undergraduate students in exact sciences. 
-Therefore, this work seeks to introduce Lebesgue's theory of measure and integration to undergraduate students in natural sciences, aiming to expose some of the most relevant and elementary results.
-This is done using a basic methodology with a quantitative approach through a literature review.
-Through this approach, we also achieve the following specific objectives: define the foundation of the study of measure theory through measurable spaces, understand the generalized theory of measure, and describe the process of constructing the Lebesgue integral as the measure theory advances. 
+The theory of measure and integration is a crucial topic for advancing studies in mathematics. Initially developed by Bernhard Riemann (1826-1866), Georg Cantor (1845-1918), and Emile Borel (1871-1956), it was later generalized by Henri Lebesgue (1875-1941). Originally, its development aimed to generalize Riemann's integral, addressing the limitation of only being applicable to exceptional cases with few points of discontinuity. Nowadays, it finds applications in diverse areas such as Functional Analysis, Probability, Statistics, Partial Differential Equations, among others.
+%
+Despite its contemporary significance, Lebesgue integration theory is not commonly introduced to undergraduate students in exact sciences. This work seeks to provide an introductory overview of the theory of measure and Lebesgue integration for undergraduate students in natural sciences, highlighting some of the most relevant and fundamental results. This is achieved using a basic methodology with a quantitative approach through a literature review.
+%
+Through this review, we also attain the following specific objectives: define the foundational aspects of measure theory through measurable spaces, comprehend the generalized theory of measure, and elucidate the construction process of Lebesgue's integral through the progression of measure theory.
+%
 Finally, a proposal is suggested for presenting the topic covered in this work to undergraduate students in exact sciences.
 
-% Keywords, separated by a period
-\keywords{measure theory; Lebesgue integration theory; calculus education.}
+% Keywords separated by a period
+\keywords{measure theory; Lebesgue integration theory; calculus teaching.}
