--- a/elementos-textuais/1Introdução.tex
+++ b/elementos-textuais/1Introdução.tex
@@ -11,6 +11,7 @@
 %c) Apresentar algumas possibilidades de demonstrações para casos de aplicações da convergência de sequências de números reais no Cálculo Diferencial e Integral.
 
 \chapter{Introdução}
+\label{chap:intro}
 % Justificativa
 
     Conseguir medir grandezas é essencial em nosso cotidiano.
